# loop-engineering-py

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
backlog_grinder/: __init__.py  cli.py  coverage.py  coverage_adapter.py  driver.py  feedback.py  gate.py  git_adapter.py  guards.py  implementer.py  parse.py  persist.py  provenance.py  state.py  triage.py
examples/: claude-implementer.sh  verifier-pep8.sh
port/: cov-fixup.py  grind-port.sh
scripts/: grind.sh
tests/: test_cli_e2e.py  test_coverage.py  test_coverage_adapter.py  test_driver.py  test_e2e.py  test_e2e_v2.py  test_feedback.py  test_gate.py  test_git_adapter.py  test_guards.py  test_implementer.py  test_parse.py  test_persist.py  test_provenance.py  test_state.py  test_triage.py  test_triage_cli.py
