[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-grinder"
version = "0.1.0"
description = "A model-agnostic loop-engineering harness: drain a finite backlog against a repo behind a hybrid checker."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]

[project.scripts]
backlog-grind = "backlog_grinder.cli:main"

[tool.setuptools.packages.find]
include = ["backlog_grinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = false
source = ["backlog_grinder"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# PEP 8 (pycodestyle E/W), pyflakes F, import order I, naming N.
select = ["E", "W", "F", "I", "N", "UP"]
