[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-grinder"
version = "0.1.0"
description = "A model-agnostic loop-engineering harness: drain a finite backlog against a repo behind a hybrid checker."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "pre-commit>=3.5"]

[project.scripts]
backlog-grind = "backlog_grinder.cli:main"

[tool.setuptools.packages.find]
include = ["backlog_grinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = false
source = ["backlog_grinder"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
]

[tool.ruff]
# Note: mcp-context-forge uses 200; we keep 100 (more readable for a small codebase).
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# PEP 8 (E/W), pyflakes (F), import order (I), naming (N), pyupgrade (UP),
# docstring presence (D1xx) + Google-arg completeness (D417), logging format (G).
select = ["E", "W", "F", "I", "N", "UP", "D1", "D417", "G"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need module/function docstrings.
"tests/**" = ["D1", "D417"]
